syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc GetOrder(GetOrderRequest) returns (OrderResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse);
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
  rpc GetUserOrders(GetUserOrdersRequest) returns (GetOrdersResponse);
}

message CreateOrderRequest {
  string userId = 1;
  repeated OrderItem items = 2;
  double totalAmount = 3;
}

message GetOrderRequest {
  string id = 1;
}

message UpdateOrderStatusRequest {
  string id = 1;
  string status = 2;
}

message GetOrdersRequest {
  int32 page = 1;
  int32 limit = 2;
}

message GetUserOrdersRequest {
  string userId = 1;
  int32 page = 2;
  int32 limit = 3;
}

message OrderItem {
  string productId = 1;
  int32 quantity = 2;
  double price = 3;
}

message OrderResponse {
  string id = 1;
  string userId = 2;
  repeated OrderItem items = 3;
  double totalAmount = 4;
  string status = 5;
  string createdAt = 6;
  string updatedAt = 7;
}

message GetOrdersResponse {
  repeated OrderResponse orders = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}
